--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 2,
     "name": "__MSG_appName__",
     "short_name": "Tab Saver",
-    "version": "1.5.3",
+    "version": "1.6.2",
     "description": "__MSG_appDesc__",
     "author": "Roger Pedrós Villorbina.",
     "default_locale": "es",
@@ -15,7 +15,7 @@
     },
     "options_page": "App/Settings/settings.html",
     "background": {
-        "scripts": ["Background/managerProvider.js", "Background/manager.js", "Background/managerListeners.js"]
+        "scripts": ["Background/Provider.js", "Background/Manager.js", "Background/Listener.js"]
     },
     "incognito": "spanning",
     "permissions": [
@@ -26,7 +26,8 @@
         "bookmarks",
         "contextMenus",
         "<all_urls>",
-        "identity"
+        "identity",
+        "contextMenus"
     ],
     "content_security_policy": "script-src 'self' https://www.gstatic.com/ https://apis.google.com/ https://www.google-analytics.com/ https://*.firebaseio.com; object-src 'self'",
     "commands": {
