Beta 1.7.3:  -Traducció español, catala i angles

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 2,
     "name": "__MSG_appName__",
     "short_name": "Tab Saver",
-    "version": "1.7.3",
+    "version": "1.8",
     "description": "__MSG_appDesc__",
     "author": "Roger Pedrós Villorbina.",
     "default_locale": "es",
@@ -26,7 +26,7 @@
         "bookmarks",
         "contextMenus"
     ],
-//    "content_security_policy": "script-src 'self' https://www.gstatic.com/ https://www.google-analytics.com/ object-src 'self'",
+    "content_security_policy": "script-src 'self' https://www.gstatic.com/ https://apis.google.com/ https://www.google-analytics.com/ https://*.firebaseio.com; object-src 'self'",
     "commands": {
         "_execute_browser_action": {
             "suggested_key": {
