--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 2,
     "name": "__MSG_appName__",
     "short_name": "Tab Saver",
-    "version": "1.8.3",
+    "version": "1.8.4",
     "description": "__MSG_appDesc__",
     "author": "Roger Pedrós Villorbina.",
     "default_locale": "en",
@@ -31,7 +31,8 @@
         "_execute_browser_action": {
             "suggested_key": {
                 "default": "Ctrl+Q"
-            }
+            },
+            "global": true
         }
     }
 }
