--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 2,
     "name": "__MSG_appName__",
     "short_name": "Tab Saver",
-    "version": "1.9",
+    "version": "1.9.1",
     "description": "__MSG_appDesc__",
     "author": "Roger Pedrós Villorbina.",
     "default_locale": "en",
@@ -22,15 +22,17 @@
         "tabs",
         "storage",
         "notifications",
-        "activeTab",
-        "bookmarks",
-        "contextMenus"
+        "bookmarks"
     ],
     "content_security_policy": "script-src 'self' https://www.gstatic.com/ https://apis.google.com/ https://www.google-analytics.com/; object-src 'self' ",
     "commands": {
         "_execute_browser_action": {
             "suggested_key": {
-                "mac": "Command+U"
+                "mac": "Command+U",
+                "windows": "Ctrl+U",
+                "chromeos": "Ctrl+U",
+                "linux": "Ctrl+U",
+                "default": "Ctrl+U"
             },
             "global": false
         }
